[gd_scene load_steps=4 format=3 uid="uid://do0hw77ioyanx"]

[ext_resource type="Texture2D" uid="uid://bonjuuemv6dgh" path="res://assets/sprites/message.png" id="1_2gk58"]
[ext_resource type="Script" uid="uid://fqodmv0ex2lm" path="res://hud/hud.gd" id="1_318vg"]
[ext_resource type="Texture2D" uid="uid://ba8lmvph36xuc" path="res://assets/sprites/gameover.png" id="2_318vg"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_318vg")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPadding" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_top = 85

[node name="ScoreContainer" type="HBoxContainer" parent="UI/TopPadding"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="GetReadSprite" type="TextureRect" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -133.5
offset_right = 92.0
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2gk58")
expand_mode = 3
stretch_mode = 3

[node name="GameOverSprite" type="TextureRect" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -21.0
offset_right = 96.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_318vg")
expand_mode = 3
stretch_mode = 3

[node name="BottomPadding" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -116.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72
theme_override_constants/margin_bottom = 85

[node name="StartButton" type="Button" parent="UI/BottomPadding"]
unique_name_in_owner = true
layout_mode = 2
text = "start"

[node name="RestartButton" type="Button" parent="UI/BottomPadding"]
unique_name_in_owner = true
layout_mode = 2
text = "restart"

[connection signal="pressed" from="UI/BottomPadding/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/BottomPadding/RestartButton" to="." method="_on_restart_button_pressed"]
